# Chat-com-fastapi

./: Procfile  pyproject.toml
.github/workflows/: manual_deploy.yml
app/: __init__.py  manager.py
static/: script.js  style.css
templates/: index.html  template.html
templates/css/: style.css
templates/js/: script.js
