[tool.poetry]
name = "Chat-com-fastapi"
version = "0.2.1"
description = ""
authors = ["Thi <tiagoqueirozgoncalves100@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.5"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
Jinja2 = "^3.1.2"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
